@@ -1,3 +1,9 @@
+2002-06-10  Geoffrey Keating  <geoffk@redhat.com>
+
+	* merge.c (merge_strings): Use htab_create_alloc with calloc, not
+	htab_alloc.
+	* elf-strtab.c (_bfd_elf_strtab_finalize): Likewise.
+
 2002-06-08  H.J. Lu <hjl@gnu.org>
 
 	* elf.c (copy_private_bfd_data): Don't cast to bfd_size_type to
